--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <hr>
     <img src="data/jerem.jpg" height="500" width="900">
     <hr>
-    <iframe src="http://danielgaming.club" width="900" height="600"></iframe>
+    <iframe src="https://www.redbubble.com/i/t-shirt/daniel-gaming-drip-by-AkkoFortySeven/142564459.WFLAH" width="900" height="600"></iframe>
         <br>
     <iframe style="border:0;" src="fart.html" width="500"></iframe>
     <hr>
@@ -80,7 +80,7 @@
         contact
     </a>
 
-    <a href="http://danielgaming.club" target=_blank>
+    <a href="https://www.redbubble.com/i/t-shirt/daniel-gaming-drip-by-AkkoFortySeven/142564459.WFLAH" target=_blank>
     <img src="data/danielgamingmerch!!!!.jpg" height="300" width="600" alt="danielgaming merch its awesome go to danielgaming.club and buy" title="danielgmaing mercher">
     </a>
 </body>
